@@ -1,6 +1,9 @@
 git-annex (0.20110421) UNRELEASED; urgency=low
 
   * Use haskell Crypto library instead of haskell SHA library.
+  * Remove testpack from build depends, as it is not available
+    on all architectures. The test suite will not be run if it
+    cannot be compiled.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 21 Apr 2011 16:35:27 -0400
 
